force-app/main/default/objects/rh2__Rollup_Helper_Record_Scope__c/fields/rh2__Ignore_Query_Error__c.field-meta.xml
<CustomField>
    <fullName>rh2__Ignore_Query_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to ignore query errors when calculating lookup skew.</description>
    <label>Ignore Query Error</label>
    <type>Checkbox</type>
</CustomField>