force-app/main/default/objects/rh2__Rollup_Helper_Record_Scope__c/fields/rh2__Record_Scope__c.field-meta.xml
<CustomField>
    <fullName>rh2__Record_Scope__c</fullName>
    <description>The maximum number of records of this object that Rollup Helper will process in a single asynchronous request.</description>
    <label>Record Scope</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>