force-app/main/default/objects/rh2__Rollup_Helper_Record_Scope__c/fields/rh2__Rollups_Per_Async__c.field-meta.xml
<CustomField>
    <fullName>rh2__Rollups_Per_Async__c</fullName>
    <description>The maximum number of rollups processed per asynchronous job. Lowering this setting can greatly reduce the number of query rows consumed per job, but may greatly increase the number of queue items needed to process all rollups.</description>
    <label>Rollups Per Asynchronous Request</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>